--- a/app/Resources/views/default/kontakt.html.twig
+++ b/app/Resources/views/default/kontakt.html.twig
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="{{ path('_dasProjekt') }}">Das Projekt</a></li>
                 <li><a href="{{ path('_arbeitenImKontext') }}">Arbeiten im Kontext</a></li>
-                <li><a href="#">Möbel-Archiv</a></li>
+                <li><a href="{{ path('_moebelarchivDummy') }}">Möbel-Archiv</a></li>
                 <li class="close-burger-trigger"><a class=" scroll-button" href="#">Kontakt</a></li>
                 <li class="close-burger-trigger"><a class=" scroll-button" href="#impressum">Impressum</a></li>
                 <li class="close-burger-trigger"><a class=" scroll-button" href="#datenschutz">Datenschutzerklärung</a></li>
