--- a/app/Resources/views/default/arbeitenImKontext.html.twig
+++ b/app/Resources/views/default/arbeitenImKontext.html.twig
@@ -21,11 +21,14 @@
     </p>
 
 
-    {# BILDER: #}
     <div class="arbeiten-im-kontext">
         <section class="grid grid-gross images-overview arbeiten-im-kontext-overview">
             <div class="grid-sizer grid-item-gross" style="display: none;"></div>
 
+
+    {# BILDER: #}
+
+            {# BILD #}
             <figure class="grid-item grid-item-gross">
                 <img alt="" src="{{ asset('assets/images/Geburtstagsgruss_Happy_200_Years_Fidel_Peugeot_2017.jpg') }}"/>
                 <figcaption>
@@ -35,6 +38,7 @@
                 </figcaption>
             </figure>
 
+            {# BILD #}
             <figure class="grid-item grid-item-gross">
                 <img alt="" src="{{ asset('assets/images/Bugholzschriftzug_Lilo_Schaefer_2017.jpg') }}"/>
                 <figcaption>
@@ -43,6 +47,7 @@
                 </figcaption>
             </figure>
 
+            {# BILD #}
             <figure class="grid-item grid-item-gross">
                 <img alt="" src="{{ asset('assets/images/testbild.png') }}"/>
                 <figcaption>
@@ -50,6 +55,7 @@
                 </figcaption>
             </figure>
 
+            {# BILD #}
             <figure class="grid-item grid-item-gross">
                 <img alt="" src="{{ asset('assets/images/testbild.png') }}"/>
                 <figcaption>
@@ -58,6 +64,8 @@
                 </figcaption>
             </figure>
         </section>
+
+
 
     </div>
 
