--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -88,6 +88,7 @@ button::-moz-focus-inner {
 }
 .black-button:active, .black-button:focus{
     color: rgb(248,197,198);
+    outline: none!important;
 }
 
 .mini{
