--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -86,8 +86,8 @@ button::-moz-focus-inner {
     /* Corrects inability to style clickable `input` types in iOS */
     -webkit-appearance: none;
 }
-.black-button:active, .black-button:focus{
-    color: rgb(248,197,198);
+.black-button:active{
+    opacity: 0.75!important;
     outline: none!important;
 }
 
