--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
     <meta name="description" lang="de" content="Digitales Archiv für Grafiken der Thonet GmbH">
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('assets/css/ion.rangeSlider.min.css') }}" rel="stylesheet" type="text/css" />
-    <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet" type="text/css" />
+    <link href="{{ asset('assets/css/style.min.css') }}" rel="stylesheet" type="text/css" />
 
     {% block stylesheets %}{% endblock %}
 
@@ -198,7 +198,7 @@
     <script src="{{ asset('assets/js/jquery.zoom.min.js') }}"></script>
     <script src="{{ asset('assets/js/js.cookie.min.js') }}"></script>
     <script src="{{ asset('assets/js/ion.rangeSlider.min.js') }}"></script>
-    <script src="{{ asset('assets/js/scripts.js') }}"></script>
+    <script src="{{ asset('assets/js/scripts.min.js') }}"></script>
     {% block javascripts %}{% endblock %}
 
 </body>
