meta keywords und description.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>{% block title %}Thonet-Archiv{% endblock %}</title>
-    <meta name="keywords" content="Thonet, Archiv, Möbel, Grafiken, Design, Düsseldorf, Lilo Schäfer">
-    <meta name="description" lang="de" content="Digitales Archiv für Grafiken der Thonet GmbH">
+    <meta name="keywords" content="Thonet, Archiv, Möbel, Grafik, Design, Frankenberg, Lilo Schäfer, Thonet GmbH, Thonetarchiv, Michael Thonet">
+    <meta name="description" lang="de" content="Digitales Archiv über die grafische Geschichte der Thonet GmbH">
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('assets/css/ion.rangeSlider.min.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ asset('assets/css/style.min.css') }}" rel="stylesheet" type="text/css" />
